--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "joi": "^17.10.2",
     "loadash": "^1.0.0",
     "mongoose": "^7.0.0",
     "nodemon": "^2.0.20"
