--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/Xscold1/node-js-template#readme",
   "dependencies": {
+    "@tensorflow/tfjs": "^4.12.0",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
