--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "joi": "^17.10.2",
+    "js-datasets-iris": "^1.0.4",
     "js-regression": "^1.0.10",
     "loadash": "^1.0.0",
     "mongoose": "^7.0.0",
