--- a/package.json
+++ b/package.json
@@ -19,15 +19,16 @@
   },
   "homepage": "https://github.com/Xscold1/node-js-template#readme",
   "dependencies": {
-    "@tensorflow/tfjs": "^4.12.0",
     "bcrypt": "^5.1.1",
+    "csv-parser": "^3.0.0",
+    "decision-tree": "^0.3.7",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "fs": "^0.0.1-security",
     "joi": "^17.10.2",
-    "js-datasets-iris": "^1.0.4",
-    "js-regression": "^1.0.10",
     "loadash": "^1.0.0",
     "mongoose": "^7.0.0",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "papaparse": "^5.4.1"
   }
 }
