--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
   "homepage": "https://github.com/Xscold1/node-js-template#readme",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cloudinary": "^1.41.0",
     "csv-parser": "^3.0.0",
     "decision-tree": "^0.3.7",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
     "joi": "^17.10.2",
+    "jsonwebtoken": "^9.0.2",
     "loadash": "^1.0.0",
     "mongoose": "^7.0.0",
     "nodemon": "^2.0.20",
