--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "jsonwebtoken": "^9.0.2",
     "loadash": "^1.0.0",
     "mongoose": "^7.0.0",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.7",
     "nodemon": "^2.0.20",
     "papaparse": "^5.4.1"
   }
