--- a/package.json
+++ b/package.json
@@ -21,19 +21,14 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cloudinary": "^1.41.0",
-    "csv-parser": "^3.0.0",
-    "decision-tree": "^0.3.7",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "fs": "^0.0.1-security",
     "joi": "^17.10.2",
     "jsonwebtoken": "^9.0.2",
-    "loadash": "^1.0.0",
     "mongoose": "^7.0.0",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^6.9.7",
-    "nodemon": "^2.0.20",
-    "papaparse": "^5.4.1"
+    "nodemon": "^2.0.20"
   }
 }
