--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "mongoose": "^7.0.0",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.9.7",
     "nodemon": "^2.0.20"
   }
