--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "multer-storage-cloudinary": "^4.0.0",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.7",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "regression": "^2.0.1"
   }
 }
